# chemischill

./: DEPLOYMENT.md  README.md  missing_be_api.md  project_description.md  render.yaml
FrontEnd/: .env.example  .env.production  .gitignore  index.html  package-lock.json  package.json
FrontEnd/src/app/: routes.tsx
FrontEnd/src/app/components/: DocumentRow.tsx
FrontEnd/src/app/contexts/: AuthContext.tsx  LanguageContext.tsx
FrontEnd/src/app/data/: mockData.ts
FrontEnd/src/lib/: adapters.ts  api.ts  env.ts
FrontEnd/src/services/: admin.ts  auth.ts  categories.ts  community.ts  documents.ts  quizzes.ts  tags.ts  teachers.ts  users.ts
FrontEnd/src/styles/: index.css
backend/: .dockerignore  .env.example  .env.supabase  .gitignore  CLAUDE.md  Dockerfile  app-config-template.yaml  backend_guide.md  backend_plan.md  compose-stack.yaml  compose.yaml  pyproject.toml  run.sh  seed.py  start-render.sh
backend/alembic/: env.py
backend/api/: __init__.py  api_main.py  dependencies.py  middleware.py  models.py
backend/api/routers/: auth.py  categories.py  community.py  documents.py  quizzes.py  tags.py  teachers.py  users.py
backend/clients/: __init__.py  databases.py
backend/config/: __init__.py  app.py  auth.py  db_config.py  models.py  settings.py
backend/database/: models.py
backend/hooks/: error.py
backend/services/: auth.py  base_singleton.py  categories.py  community.py  documents.py  quizzes.py  tags.py  teachers.py  users.py
backend/utils/: jwt.py  pagination.py  storage.py
frontend/: README.md
frontend/src/app/: routes.tsx
(+60 files in other folders)
